src/objects/Staging_NEO_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>ClickLink_IS_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClickLink IS Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Staging NEO Invoices</relationshipLabel>
        <relationshipName>Staging_NEO_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Account</label>
        <referenceTo>ffps_dmg__FinanceAccount__c</referenceTo>
        <relationshipLabel>Staging NEO Invoices</relationshipLabel>
        <relationshipName>Staging_NEO_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEO_Reference__c</fullName>
        <label>NEO Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BACS Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt Write Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Debt Write Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Adj. Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Adj. Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debit Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maestro Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Sales Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nominal Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Balance Credit Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Balance Debit Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sundry Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sundry Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Credit Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid Cheque Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unpaid Direct Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA Receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Staging NEO Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NEO-INV-{000000}</displayFormat>
        <label>Staging NEO Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging NEO Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>